sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value v
		copie(v,j)
                      ^